noti z-index fix

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -45,7 +45,7 @@ $desktop-width: 1280px;
 }
 
 // z-index global layers
-$z-notification-layer: 4;
+$z-notification-layer: 5;
 $z-modal-layer: 4;
 $z-dropdown-layer: 3;
 $z-sidebar-layer: 2;
